@@ -1,5 +1,6 @@
 Version 2.02.180 - 
 =================================
+  Fix check if resized PV can also fit metadata area.
   Reopen devices RDWR before writing to avoid udev issues.
   Fix mem leak in clvmd.
 
